# open-forward-NN

./: .gitignore  Cargo.toml  README.md
examples/: cifar10.rs  simple-categorical.rs  simple.rs
src/: activations.rs  lib.rs  losses.rs
