[package]
authors = ["Flix <felix.dommes@rwth-aachen.de>"]
categories = ["science"]
description = "An open (accessible parameters), feed-forward-only NN (neural net) library to use it in an dynamic and free way in evolutionary algorithms. Design is influenced by the Keras Sequetial model."
documentation = "https://docs.rs/ofnn"
edition = "2021"
homepage = "https://github.com/FlixCoder/open-forward-NN"
keywords = ["nn", "neural-nets", "evolution", "machine-learning"]
license = "Apache-2.0"
name = "ofnn"
readme = "README.md"
repository = "https://github.com/FlixCoder/open-forward-NN"
resolver = "2"
version = "0.1.3"

[dependencies]
rand = "0.8"
rand_distr = "0.4"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"

[dev-dependencies]
esopt = {git = "https://github.com/FlixCoder/rust-es-optimizer.git"}
rand = {version = "0.8", features = ["small_rng"]}

[features]
floats-f64 = []

[profile.release]
debug = true
lto = true
